# lol_matchups

./: .env.example  .gitignore  CLAUDE.md  COMMANDS.md  WINDOWS.md  app.py  config.py  crawl_champions.py  crawler.py  db.py  debug_lcu.py  fetch_attributes.py  installer.iss  launcher.py  lcu.py  lol_matchups.spec  main.py  proximity_weights.py  pyproject.toml  riot_client.py  scrape_lolalytics.py  scrape_wiki_ratings.py  sync.py  updater.py  version.py
.claude/: settings.local.json
.github/scripts/: db_version.py
.github/workflows/: crawl.yml  release.yml
static/css/: draft.css
static/js/: draft.js
templates/: base.html  champion.html  draft.html  index.html
